src/tests/fixtures/custom_scalar/RedefineBuiltinScalar.invalid.ts
/** @GQLScalar String */
type MyUrl = string;
